@startuml
' Рис. 2.6. Логічна схема бази даних
skinparam shadowing false
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 11
hide circle
skinparam linetype ortho
skinparam entity {
    BackgroundColor #f5f5f5
    BorderColor #333333
}

entity "profiles" {
    * id <<PK>>
    --
    code <<UQ>>
    name
    description
}

entity "criteria" {
    * id <<PK>>
    --
    code <<UQ>>
    name
    unit
    optimization_type
    scale
}

entity "pairwise_matrices" {
    * profile_id <<PK,FK>>
    * criterion_i <<PK,FK>>
    * criterion_j <<PK,FK>>
    --
    l
    m
    u
}

entity "criterion_values" {
    * location_id <<PK,FK>>
    * criterion_id <<PK,FK>>
    --
    value
}

entity "locations" {
    * id <<PK>>
    --
    name
    address
    district
    geom
}

entity "existing_stations" {
    * id <<PK>>
    --
    name
    power_kw
    connector_type
    geom
}

entity "evaluation_runs" {
    * id <<PK>>
    * profile_id <<FK>>
    --
    created_at
    status
    weights_vector
    execution_time_ms
}

entity "ranking_items" {
    * evaluation_id <<PK,FK>>
    * location_id <<PK,FK>>
    --
    rank
    closeness_coefficient
    distance_to_positive
    distance_to_negative
}

entity "sensitivity_records" {
    * evaluation_id <<PK,FK>>
    --
    iterations
    perturbation
    stability_matrix
    confidence_intervals
}

profiles ||--o{ pairwise_matrices
criteria ||--o{ pairwise_matrices
locations ||--o{ criterion_values
criteria ||--o{ criterion_values
profiles ||--o{ evaluation_runs
evaluation_runs ||--o{ ranking_items
evaluation_runs ||--|| sensitivity_records
locations ||--o{ ranking_items

@enduml
